--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,6 @@
 <h1 >{{title}}</h1>
 <div>
-    <a href="index">Testing</a>
+    <a href="/">Home</a>
     <a href="help">Help</a>
     <a href="about">About</a>
 </div>
