--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,8 +12,8 @@
     <p>{{body}}</p>
 
     <form>
-        <textarea id=myTextArea placeholder="Enter your text here ..."></textarea><br>
-        <button>Send</button>
+        <textarea id=myTextArea placeholder="Enter your text here ..."></textarea><br><br>
+        <button class="my-button">Send</button>
     </form>
     <pre>
         <code>
