--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,11 +15,7 @@
         <textarea id=myTextArea placeholder="Enter your text here ..."></textarea><br><br>
         <button class="my-button">Send</button>
     </form>
-    <pre>
-        <code>
-            <p id="result">{{result}}</p>
-        </code>
-    </pre>    
+        <textarea id="result">{{result}}</textarea> <br><br>
     <footer>
         {{>footer}}
     </footer>
