--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,8 +50,7 @@ footer {
     position: relative;
     width: 100%;
   }
-
-  #myTextArea {
+  textarea {
     font-size: 16px; /* set the default font size */
     width: 100%; /* set the width to fill the parent container */
     min-height: 100px; /* set a minimum height */
