added a gpt logo

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,4 +1,7 @@
-<h1 >{{title}}</h1>
+<div style="display: flex; align-items: center;">
+    <img src="/img/ChatGPT_logo.png" style="margin-right: 10px;"/>
+    <h1>{{title}}</h1>
+</div>
 <div>
     <a id="homelink" href="/">Home</a>
     <a href="help">Help</a>
