Formatted the json response to string for better display

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,11 +13,11 @@
 
     <form id="get-resp">
         <textarea id=myTextArea placeholder="Enter your text here ..."></textarea><br><br>
-        <button class="my-button">GET</button>
+        <button class="my-button">Get Response</button>
     </form>
         <textarea id="result">{{result}}</textarea> <br><br>
     <form id="post-resp">
-        <button class="my-button">POST</button>
+        <button class="my-button">Post To JIRA</button>
     </form>
         <textarea id="result2">{{result}}</textarea> <br><br>
     <footer>
